minor changes towards integration of ruleevaliterationmetadata